--- a/web/src/assets/main.css
+++ b/web/src/assets/main.css
@@ -1,4 +1,5 @@
 @import './base.css';
+@import url(https://scdn.malaoer.top/MapleMono/v7.8/result.css);
 
 :root {
   --font-sans:
@@ -83,4 +84,8 @@ body {
   to {
     transform: rotate(360deg);
   }
+}
+
+html * {
+  font-family: 'Maple Mono NF CN';
 }
