--- a/web/src/assets/main.css
+++ b/web/src/assets/main.css
@@ -1,5 +1,5 @@
 @import './base.css';
-@import url(https://scdn.malaoer.top/MapleMono/v7.8/result.css);
+@import url(https://cdn.malaoer.top/MapleMono/v7.8/result.css);
 
 :root {
   --font-sans:
